# Humanoid

./: README.md  happy.cpp  houghLine  houghLine.cpp  houghLine2.cpp  line_tracking.cpp  main.cpp  robobasic_protocol.txt  trackbar_test.cpp  순서도.txt  임베디드 경진 대회 보고서.hwp
[지능형 휴머노이드 최우수상]Kobot-r_소스코드/: CMakeLists.txt  RobotProtocol.cpp  RobotProtocol.h  kobot.h  main.cpp
[지능형 휴머노이드 최우수상]Kobot-r_소스코드/컬링/: curling.cpp  curling.h
[지능형 휴머노이드 최우수상]Kobot-r_소스코드/하키슈터/: hockey_shooter.cpp  hockey_shooter.h
[지능형 휴머노이드 최우수상]Kobot-r_소스코드/하키패서/: Koo.cpp  Koo.h
img_processing/: main_hough.cpp
main/: main.cpp
main/robot/: main.cpp  serial.cpp
raspicam/: main_hough.cpp
serial/: RX_test.cpp  TX_test.cpp  serial_input.c  serial_test.cpp
